--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,78 @@
+html, body {
+    height: 100%;
+    min-width: 1080px;
+    background: #f8f8f8;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+
 header ul {
     display: flex;
     list-style: none;
+    justify-content: center;
+}
+
+.logoa {
+    width: 500px;
+    height: 500px;
+}
+
+.brasao {
+    padding: 0px 20px 20px 20px;
+}
+
+#menucima {
+    padding: 10px;
+}
+
+#cabecalhologo {
+    display: flex;
+    height: 117px;
+    background-image: url(../RES/topo60.jpg);
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+#posicaologo{
+    float: left;
+    width: 560px;
+    display: block;
+    height: 117px;
+}
+
+#menu {
+    background-color: #5A84B7;
+}
+
+#menu ul li a{
+    font-size: 13px;
+    text-decoration: none;
+    color: white;
+}
+
+#menu ul li {
+    padding: 13px 0px;
+}
+
+#menu ul li:hover{
+    background-color: #344C68;
+    
+}
+
+#form-itens input{
+    padding: 8px;
+}
+
+#conteudo {
+    margin: 0 auto 50px;
+    width: 1000px;
+    padding: 0 10px;
+    min-height: 600px;
 }
