--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,11 +18,6 @@ header ul {
     justify-content: center;
 }
 
-.logoa {
-    width: 500px;
-    height: 500px;
-}
-
 .brasao {
     padding: 0px 20px 20px 20px;
 }
@@ -59,6 +54,7 @@ header ul {
 
 #menu ul li {
     padding: 13px 0px;
+    margin-right: 10px;
 }
 
 #menu ul li:hover{
@@ -68,11 +64,38 @@ header ul {
 
 #form-itens input{
     padding: 8px;
+    display: inline-block;
 }
 
 #conteudo {
+    display: block;
     margin: 0 auto 50px;
     width: 1000px;
     padding: 0 10px;
     min-height: 600px;
+    text-align: center;    
+}
+
+#conteudo a .bannerG{
+    width: 490px;
+    height: 130px;
+    margin: 25px 0px 15px 0px;
+}
+
+#conteudo a .bannerM{
+    margin: 5px;
+}
+
+.campoConteudo a img {
+    width: 1000px;
+    height: 565px;
+}
+
+.noticia-textos {
+    padding: 2.5em;
+    position: absolute;
+    bottom: 0;
+    background: rgba(5, 61, 110, 0.8);
+    color: #fff;
+    width: 920px;
 }
