--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,6 +86,11 @@ header ul {
     margin: 5px;
 }
 
+#noticias span {
+    display: block;
+    width: 100%;
+}
+
 .campoConteudo a img {
     width: 1000px;
     height: 565px;
@@ -94,7 +99,7 @@ header ul {
 .noticia-textos {
     padding: 2.5em;
     position: absolute;
-    bottom: 0;
+    bottom: -10%;
     background: rgba(5, 61, 110, 0.8);
     color: #fff;
     width: 920px;
